# milkyway

./: README.md
.github/workflows/: libmilkyway.yml
configs/cli/: mwayrc.yml
configs/mway/: mway-server.yml
doc/: Architecture.drawio
libmilkyway/: Cargo.toml  README.md
libmilkyway/src/: actor.rs  cli.rs  controllers.rs  lib.rs  macros.rs  message.rs  module.rs  pki.rs  serialization.rs  services.rs  tokio.rs  transport.rs  utils.rs
libmilkyway/src/actor/: binder.rs
libmilkyway/src/actor/binder/: coroutine.rs
libmilkyway/src/cli/: arguments.rs  io.rs  router.rs  table.rs
libmilkyway/src/controllers/: authorization.rs
libmilkyway/src/message/: common.rs  exec.rs  ping.rs  types.rs
libmilkyway/src/module/: loader.rs
libmilkyway/src/pki/: certificate.rs  hash.rs  impls.rs  key.rs  signature.rs
libmilkyway/src/pki/impls/: certificates.rs  hashable.rs  keys.rs
libmilkyway/src/pki/impls/certificates/: falcon1024.rs  kyber1024.rs
libmilkyway/src/pki/impls/keys/: aes256.rs  falcon1024.rs  kyber1024.rs
libmilkyway/src/serialization/: deserializable.rs  error.rs  serializable.rs
libmilkyway/src/services/: certificate.rs  impls.rs  name.rs  transport.rs
libmilkyway/src/services/impls/: certificate.rs
libmilkyway/src/transport/: async_stream.rs  crypto.rs  handler.rs  impls.rs  stream.rs  worker.rs
libmilkyway/src/transport/impls/: tokio_handler.rs
libmilkyway/src/utils/: channel.rs
libmilkyway_derive/: Cargo.toml
libmilkyway_derive/src/: lib.rs
milkywaycli/: Cargo.toml
milkywaycli/src/: bus.rs  cli.rs  (+2 more)
milkywayd/: Cargo.toml
milkywaysrvd/: Cargo.toml
milkywaysrvd/src/: configuration.rs  listeners.rs  main.rs  services.rs
milkywaysrvd/src/db/: models.rs
milkywaysrvd/src/db/models/: command.rs  pki.rs
milkywaysrvd/src/listeners/: tokio_tcp.rs
milkywaysrvd/src/services/: certificate.rs  transport.rs
modules/: README.md
scripts/: devsetup.sh
(+13 files in other folders)
