[package]
name = "libmilkyway"
version = "0.2.2"
edition = "2021"
description = "libmilkyway is a part of milkyway project providing common protocols for communicating between MilkyWay modules"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
pqcrypto = "0.17.0"
pqcrypto-falcon = "0.3.0"
aes-gcm = "0.10.3"
rand = "0.8.5"
once_cell = "1.19.0"
futures = "0.3.30"
async-trait = "0.1.81"
tokio = { version = "1.36.0", features = ["sync", "io-util", "macros", "rt", "net", "time"] }
libloading = "0.8.4"
colored = "2.1.0"
# Internal project dependencies
libmilkyway_derive = "0.1.0"
log = "0.4.22"