[package]
name = "milkywaysrvd"
version = "0.1.0"
edition = "2021"

[dependencies]
libmilkyway = {path = "../libmilkyway"}
libmilkyway_derive = { path = "../libmilkyway_derive"}
# External crates
colored = "2.1.0"
yaml-rust2 = "0.8.1"
env_logger = "0.11.3"
tokio = "1.38.1"
log = "0.4.22"
async-trait = "0.1.81"